--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -2,16 +2,17 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:scrumproject="clr-namespace:Scrumproject"
-        Title="MainWindow" Height="612.687" Width="847.388">
+        Title="MainWindow" Height="734.687" Width="652.388">
 
-    <Grid>
+    <Grid Margin="0,0,-250,0" HorizontalAlignment="Left" Width="894">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="17*"/>
             <ColumnDefinition Width="0*"/>
-            <ColumnDefinition Width="528*"/>
-            <ColumnDefinition Width="294*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="649*"/>
+            <ColumnDefinition Width="241*"/>
+            <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <TabControl Grid.ColumnSpan="4" BorderBrush="White" Margin="0,-26,-11,-9">
+        <TabControl Grid.ColumnSpan="3" BorderBrush="White" Margin="-10,-26,0,-134" HorizontalAlignment="Left" Width="662" Height="864" VerticalAlignment="Top">
             <TabControl.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -31,22 +32,22 @@
                 </LinearGradientBrush>
             </TabControl.OpacityMask>
             <TabItem Header="Rapportering">
-                <Canvas Margin="0,-3,0,3">
-                    <DatePicker x:Name="dpStartDate" Canvas.Left="185" Canvas.Top="29" Width="130" Height="27"></DatePicker>
-                    <DatePicker x:Name="dpEndDate" Canvas.Left="336" Canvas.Top="30" Width="118"></DatePicker>
+                <Canvas Margin="0,-3,236,127">
+                    <DatePicker x:Name="dpStartDate" Canvas.Left="185" Canvas.Top="29" Width="130" Height="27" Background="Black"></DatePicker>
+                    <DatePicker x:Name="dpEndDate" Canvas.Left="336" Canvas.Top="30" Width="118" Background="Black"></DatePicker>
                     <Label x:Name="lbStartDate" Content="Start/slutdatum                            " Canvas.Left="27" Canvas.Top="25" Width="134" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbEndDate" Content="-" Canvas.Left="317" Canvas.Top="25" Width="18" RenderTransformOrigin="0.366,0.311" Foreground="White" FontSize="16" FontWeight="Bold"/>
                     <Label x:Name="lbFreeDay" Content="Antal lediga dagar" Canvas.Left="26" Canvas.Top="54" Width="161" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <ListView/>
                     <Label x:Name="lbCarTripLength" Content="Bilresor" Canvas.Left="26" Canvas.Top="80" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="38" Canvas.Top="149" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Label x:Name="lbLand" Content="Land" Canvas.Left="207" Canvas.Top="179" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <TextBox x:Name="lbCarTripLengthKm" Height="23" Canvas.Left="187" TextWrapping="Wrap" Text="Km" Canvas.Top="88" Width="102" Background="White"/>
-                    <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan:" Canvas.Left="590" Canvas.Top="27" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
-                    <TextBox x:Name="tbDoneOnTrip" Height="113" Canvas.Left="594" TextWrapping="Wrap" Text="" Canvas.Top="54" Width="214" Background="White"/>
-                    <TextBox Height="23" Canvas.Left="187" TextWrapping="Wrap" Text="" Canvas.Top="60" Width="102" Background="White"/>
-                    <ComboBox Canvas.Left="207" Canvas.Top="210" Width="120"/>
-                    <ListView Height="126" Canvas.Left="35" Canvas.Top="180" Width="140" Background="White">
+                    <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="38" Canvas.Top="290" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Label x:Name="lbLand" Content="Land" Canvas.Left="207" Canvas.Top="320" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <TextBox x:Name="lbCarTripLengthKm" Height="23" Canvas.Left="187" TextWrapping="Wrap" Text="Km" Canvas.Top="88" Width="102" Background="Black"/>
+                    <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan:" Canvas.Left="406" Canvas.Top="93" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
+                    <TextBox x:Name="tbDoneOnTrip" Height="113" Canvas.Left="410" TextWrapping="Wrap" Text="" Canvas.Top="120" Width="214" Background="Black"/>
+                    <TextBox Height="23" Canvas.Left="187" TextWrapping="Wrap" Text="" Canvas.Top="60" Width="102" Background="Black"/>
+                    <ComboBox Canvas.Left="207" Canvas.Top="351" Width="120"/>
+                    <ListView Height="126" Canvas.Left="35" Canvas.Top="321" Width="140" Background="Black">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn/>
@@ -54,10 +55,10 @@
                         </ListView.View>
                     </ListView>
                     <Button Content="Spara Kvitto
-                            " Canvas.Left="80" Canvas.Top="515" Width="121" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="29,1,1,1"/>
-                    <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Left="80" Canvas.Top="437" Width="121" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
-                    <TextBox x:Name="tbReceiptFile" Height="23" Canvas.Left="35" TextWrapping="Wrap" Text="" Canvas.Top="409" Width="166" RenderTransformOrigin="0.67,0.409" Background="White"/>
-                    <TextBox x:Name="tbSum" Height="23" Canvas.Left="35" TextWrapping="Wrap" Text="" Canvas.Top="489" Width="163" RenderTransformOrigin="0.5,0.5" Background="White">
+                            " Canvas.Left="38" Canvas.Top="656" Width="163" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="29,1,1,1"/>
+                    <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Left="35" Canvas.Top="578" Width="166" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
+                    <TextBox x:Name="tbReceiptFile" Height="23" Canvas.Left="35" TextWrapping="Wrap" Text="" Canvas.Top="550" Width="166" RenderTransformOrigin="0.67,0.409" Background="Black"/>
+                    <TextBox x:Name="tbSum" Height="23" Canvas.Left="35" TextWrapping="Wrap" Text="" Canvas.Top="630" Width="163" RenderTransformOrigin="0.5,0.5" Background="Black">
                         <TextBox.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
@@ -67,7 +68,7 @@
                             </TransformGroup>
                         </TextBox.RenderTransform>
                     </TextBox>
-                    <ListView Height="100" Canvas.Left="220" Canvas.Top="412" Width="120" Background="White">
+                    <ListView Height="100" Canvas.Left="220" Canvas.Top="553" Width="120" Background="Black">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn/>
@@ -75,29 +76,29 @@
                         </ListView.View>
                     </ListView>
                     <Button x:Name="btnRemoveSelectedReceipt" Content="Ta bort kvitto
-                            " Canvas.Left="247" Canvas.Top="517" Width="80" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White"/>
-                    <Label x:Name="lbReceipts" Content="Kvitton för resa" Canvas.Left="215" Canvas.Top="381" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Label Content="Belopp för kvitto" Canvas.Left="31" Canvas.Top="460" Width="144" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                            " Canvas.Left="220" Canvas.Top="656" Width="120" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White"/>
+                    <Label x:Name="lbReceipts" Content="Kvitton för resa" Canvas.Left="213" Canvas.Top="522" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Label Content="Belopp för kvitto" Canvas.Left="31" Canvas.Top="601" Width="144" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label Content="Ladda upp kvitto
-                           " Canvas.Left="31" Canvas.Top="381" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Button x:Name="btnSaveDraft" Content="Spara utkast" Canvas.Left="664" Canvas.Top="472" Width="154" RenderTransformOrigin="0.618,-0.243" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White" Height="31"/>
+                           " Canvas.Left="31" Canvas.Top="522" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Button x:Name="btnSaveDraft" Content="Spara utkast" Canvas.Left="466" Canvas.Top="538" Width="154" RenderTransformOrigin="0.618,-0.243" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White" Height="31"/>
                     <Button x:Name="btnSendReport" Content="Skicka Rapport
-                            " Canvas.Left="664" Canvas.Top="508" Width="154" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White" Height="58" Click="btnSendReport_Click" Padding="40,1,1,1"/>
+                            " Canvas.Left="466" Canvas.Top="574" Width="154" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White" Height="58" Click="btnSendReport_Click" Padding="40,1,1,1"/>
                     <Label Content="Maxbelopp för land
-                           " Canvas.Left="200" Canvas.Top="279" Width="163" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="35" Canvas.Top="311" Width="66" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
+                           " Canvas.Left="200" Canvas.Top="420" Width="163" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="35" Canvas.Top="452" Width="66" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
                     <Label x:Name="lbMaxSumSpecificCountry" Content="" Canvas.Left="363" Canvas.Top="279" RenderTransformOrigin="1.556,2.432" Width="93"/>
-                    <TextBox x:Name="tbNotes" Height="178" Canvas.Left="594" TextWrapping="Wrap" Text="" Canvas.Top="207" Width="214" Background="White"/>
-                    <Label x:Name="lblNotes" Content="Anteckningar:" Canvas.Left="590" Canvas.Top="180" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="594" Canvas.Top="390" Width="121" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}"/>
-                    <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="594" Canvas.Top="413" Width="121" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
+                    <TextBox x:Name="tbNotes" Height="178" Canvas.Left="410" TextWrapping="Wrap" Text="" Canvas.Top="273" Width="214" Background="Black"/>
+                    <Label x:Name="lblNotes" Content="Anteckningar:" Canvas.Left="406" Canvas.Top="246" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="410" Canvas.Top="456" Width="214" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}"/>
+                    <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="410" Canvas.Top="479" Width="214" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
                     <Label x:Name="lbTotalDriven" Content="" Canvas.Left="146" Canvas.Top="90" Width="36" RenderTransformOrigin="1.677,0.752" Background="White" Height="21"/>
                     <Button x:Name="btnUpdateTotalDriven" Content="Uppdatera
-                            " Canvas.Left="187" Canvas.Top="116" Width="75" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1"/>
-                    <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="106" Canvas.Top="311" Width="69" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
-                    <ComboBox x:Name="cbCurrencyCountryOne" Canvas.Left="404" Canvas.Top="123" Width="120"/>
-                    <Label x:Name="lbCountryOne" Content="Från" Canvas.Left="353" Canvas.Top="117" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Label x:Name="lbValutaKonvertering" Content="Valutakonvertering" Canvas.Left="353" Canvas.Top="89" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16">
+                            " Canvas.Left="187" Canvas.Top="116" Width="102" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1"/>
+                    <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="106" Canvas.Top="452" Width="69" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
+                    <ComboBox x:Name="cbCurrencyCountryOne" Canvas.Left="81" Canvas.Top="207" Width="208"/>
+                    <Label x:Name="lbCountryOne" Content="Från" Canvas.Left="30" Canvas.Top="201" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Label x:Name="lbValutaKonvertering" Content="Valutakonvertering" Canvas.Left="30" Canvas.Top="173" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16">
                         <Label.BorderBrush>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="Black" Offset="0"/>
@@ -105,10 +106,10 @@
                             </LinearGradientBrush>
                         </Label.BorderBrush>
                     </Label>
-                    <ComboBox x:Name="cbCurrencyCountryTwo" Canvas.Left="404" Canvas.Top="150" Width="120"/>
-                    <Label x:Name="lbCountryTwo" Content="Till" Canvas.Left="353" Canvas.Top="141" RenderTransformOrigin="0.581,1.192" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <TextBox x:Name="tbValue" Height="23" Canvas.Left="207" TextWrapping="Wrap" Text="" Canvas.Top="256" Width="120" Background="White"/>
-                    <Label x:Name="lbValue" Content="Belopp:" Canvas.Left="207" Canvas.Top="228" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <ComboBox x:Name="cbCurrencyCountryTwo" Canvas.Left="81" Canvas.Top="234" Width="208"/>
+                    <Label x:Name="lbCountryTwo" Content="Till" Canvas.Left="30" Canvas.Top="225" RenderTransformOrigin="0.581,1.192" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <TextBox x:Name="tbValue" Height="23" Canvas.Left="207" TextWrapping="Wrap" Text="" Canvas.Top="397" Width="120" Background="White"/>
+                    <Label x:Name="lbValue" Content="Belopp:" Canvas.Left="207" Canvas.Top="369" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbNewValue" Content="" Canvas.Left="451" Canvas.Top="194" Width="95"/>
 
 
