--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -6,8 +6,8 @@
 
     <Grid Margin="0,0,-8,0" HorizontalAlignment="Left" Width="652">
         <Grid.RowDefinitions>
-            <RowDefinition Height="32*"/>
-            <RowDefinition Height="719*"/>
+            <RowDefinition Height="0*"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <TabControl Grid.ColumnSpan="6" BorderBrush="White" Margin="0,0,-97,0" HorizontalAlignment="Left" Width="749" Height="836" VerticalAlignment="Top" Grid.RowSpan="2">
+        <TabControl Grid.ColumnSpan="6" BorderBrush="White" Margin="0,0,-97,-3" HorizontalAlignment="Left" Width="749" Height="836" VerticalAlignment="Top" Grid.RowSpan="2" SelectionChanged="TabControl_SelectionChanged">
             <TabControl.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -41,15 +41,14 @@
                     <DatePicker x:Name="dpStartDate" Canvas.Left="191" Canvas.Top="-9" Width="108" Height="27" Background="Black"></DatePicker>
                     <Label x:Name="lbStartDate" Content="Välj start/slutdatum                            " Canvas.Top="-9" Width="167" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbFreeDay" Content="Ange antal lediga dagar" Canvas.Top="18" Width="197" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <ListView Canvas.Top="-18"/>
                     <Label x:Name="lbCarTripLength" Content="Lägg till bilresa" Canvas.Top="71" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="1" Canvas.Top="133" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Label x:Name="lbLand" Content="Välj land" Canvas.Left="191" Canvas.Top="133" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Label x:Name="lbLand" Content="Välj land" Canvas.Left="192" Canvas.Top="170" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <TextBox x:Name="TbCarTripLengthKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="74" Width="102" Background="Black" Foreground="White"/>
                     <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan" Canvas.Left="453" Canvas.Top="20" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
-                    <TextBox x:Name="tbDoneOnTrip" Height="113" Canvas.Left="453" TextWrapping="Wrap" Text="" Canvas.Top="56" Width="217" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="tbDoneOnTrip" Height="135" Canvas.Left="453" TextWrapping="Wrap" Text="" Canvas.Top="56" Width="257" Background="Black" Foreground="White"/>
                     <TextBox x:Name="TbDaysOff" Height="23" Canvas.Left="191" TextWrapping="Wrap" Text="" Canvas.Top="24" Width="38" Background="Black" Foreground="White"/>
-                    <ComboBox x:Name="CbCountries" Canvas.Left="191" Canvas.Top="169" Width="224" SelectionChanged="CbCountries_SelectionChanged"/>
+                    <ComboBox x:Name="CbCountries" Canvas.Left="192" Canvas.Top="202" Width="224" SelectionChanged="CbCountries_SelectionChanged"/>
                     <Button x:Name="BtnSaveReceipt" Content="Spara Kvitto
                             " Canvas.Left="4" Canvas.Top="501" Width="171" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="50,1,1,1" Click="Button_Click_1" Height="28"/>
                     <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Top="411" Width="175" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnUploadReceipt_Click" RenderTransformOrigin="0.566,-2.278"/>
@@ -65,28 +64,25 @@
                         </TextBox.RenderTransform>
                     </TextBox>
                     <Button x:Name="btnRemoveSelectedReceipt" Content="Ta bort kvitto
-                            " Canvas.Left="7" Canvas.Top="717" Width="168" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White" Click="btnRemoveSelectedReceipt_Click" Height="26"/>
+                            " Canvas.Left="7" Canvas.Top="726" Width="81" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="White" Foreground="Black" Background="White" Click="btnRemoveSelectedReceipt_Click" Height="26"/>
                     <Label x:Name="lbReceipts" Content="Kvitton för resa" Canvas.Top="535" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" RenderTransformOrigin="0.465,-1"/>
                     <Label Content="Belopp för kvitto" Canvas.Top="438" Width="144" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label Content="Ladda upp kvitto
-                           " Canvas.Left="1" Canvas.Top="352" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Button x:Name="btnSendReport" Content="Skicka Rapport
-                            " Canvas.Left="460" Canvas.Top="676" Width="210" FontFamily="Myriad Pro" BorderBrush="White" Foreground="White" Height="67" Click="btnSendReport_Click" Padding="25,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="{x:Null}"/>
+                           " Canvas.Left="1" Canvas.Top="352" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" Width="174"/>
+                    <Button x:Name="btnSendReport" Content="Skicka in din rapport                          " Canvas.Left="456" Canvas.Top="665" Width="254" FontFamily="Myriad Pro" BorderBrush="White" Foreground="White" Height="56" Click="btnSendReport_Click" Padding="15,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="{x:Null}"/>
                     <Label Content="Maxbelopp för land
-                           " Canvas.Left="191" Canvas.Top="257" Width="163" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                           " Canvas.Left="191" Canvas.Top="231" Width="163" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="1" Canvas.Top="320" Width="87" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20"/>
                     <Label x:Name="lbMaxSumSpecificCountry" Content="" Canvas.Left="363" Canvas.Top="279" RenderTransformOrigin="1.556,2.432" Width="93"/>
-                    <TextBox x:Name="tbNotes" Height="291" Canvas.Left="456" TextWrapping="Wrap" Text="" Canvas.Top="238" Width="214" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="tbNotes" Height="288" Canvas.Left="453" TextWrapping="Wrap" Text="" Canvas.Top="241" Width="257" Background="Black" Foreground="White"/>
                     <Label x:Name="lblNotes" Content="Fria anteckningar" Canvas.Left="454" Canvas.Top="210" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="456" Canvas.Top="535" Width="214" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}" Click="btnLoadNotes_Click"/>
-                    <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="457" Canvas.Top="535" Width="210" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnSaveNotes_Click"/>
+                    <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="456" Canvas.Top="535" Width="254" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}" Click="btnLoadNotes_Click"/>
+                    <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="456" Canvas.Top="535" Width="253" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnSaveNotes_Click"/>
                     <Button x:Name="btnUpdateTotalDriven" Content="Lägg till" Canvas.Left="279" Canvas.Top="74" Width="122" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1" Click="btnUpdateTotalDriven_Click" Height="23"/>
                     <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="88" Canvas.Top="320" Width="89" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="19"/>
-                    <TextBox x:Name="tbValue" Height="23" Canvas.Left="191" TextWrapping="Wrap" Text="" Canvas.Top="227" Width="120" Background="White"/>
-                    <Label x:Name="lbValue" Content="Belopp:" Canvas.Left="191" Canvas.Top="196" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Label Content="            " Canvas.Left="200" Canvas.Top="309" Width="163" Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="248" Canvas.Top="27" Width="153" Click="btnUpdateList_Click" Background="White" Foreground="Black"/>
-                    <TextBox x:Name="TbTotalKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="102" Width="102"/>
+                    <Label Content="            " Canvas.Left="195" Canvas.Top="260" Width="71" Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16" Background="#FFAC5F5F" Height="27"/>
+                    <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="234" Canvas.Top="24" Width="167" Click="btnUpdateList_Click" Background="White" Foreground="Black" Height="23"/>
+                    <TextBox x:Name="TbTotalKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="102" Width="102" Foreground="White" Background="#FF894F4F"/>
                     <Label x:Name="LbKm" Content="" Canvas.Left="98" Canvas.Top="71" Foreground="#FF51FF00"/>
                     <Label x:Name="LbTotalKm" Content="Sammanlagd sträcka" Canvas.Left="1" Canvas.Top="97" Foreground="White" FontSize="16" FontWeight="Bold"/>
                     <DatePicker x:Name="dpEndDate" Canvas.Left="308" Canvas.Top="-8" RenderTransformOrigin="0.5,0.5" Width="98">
@@ -100,12 +96,12 @@
                         </DatePicker.RenderTransform>
                     </DatePicker>
                     <ListBox x:Name="listBoxDays" Height="146" Width="176" Canvas.Left="1" Canvas.Top="169" Background="Black" Foreground="White"/>
-                    <ListBox x:Name="listBoxReceipts" Height="146" Width="411" Canvas.Left="4" Canvas.Top="566" Foreground="White" Background="Black"/>
+                    <ListBox x:Name="listBoxReceipts" Height="155" Width="411" Canvas.Left="4" Canvas.Top="566" Foreground="White" Background="Black"/>
 
 
                 </Canvas>
             </TabItem>
-            <TabItem Header="Förskottsansökan" Margin="0,-2,-4,0" />
+            <TabItem Header="Förskottsansökan" Margin="0,-2,-4,-1" />
             <TabItem Header="Chef" HorizontalAlignment="Left" Width="40" Margin="0,-2,0,0" >
                 <Canvas Height="836" Width="656">
                     <ListView x:Name="lvUsers" Height="136" Width="313" Canvas.Left="30" Canvas.Top="55" SelectionChanged="lvUsers_SelectionChanged_1">
