--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -1,8 +1,8 @@
-﻿    <Window x:Class="Scrumproject.MainWindow"
+﻿<Window x:Class="Scrumproject.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:scrumproject="clr-namespace:Scrumproject"
-        Title="MainWindow" Height="913.404" Width="828.508" Closing="Window_Closing_1">
+        Title="MainWindow" Height="983.852" Width="850.001" Closing="Window_Closing_1">
     <ScrollViewer>
         <Grid Margin="0,0,-8,0" HorizontalAlignment="Left" Width="652">
             <Grid.RowDefinitions>
@@ -156,21 +156,21 @@
                         <Label x:Name="lbUserID" Content="Anst. nr" Canvas.Left="456" Canvas.Top="107" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                         <TextBox x:Name="tbUserID" Height="23" Canvas.Left="579" TextWrapping="Wrap" Text="" Canvas.Top="113" Width="121" Background="Black" Foreground="White"/>
                         <ListBox x:Name="listBoxUsers" Height="166" Width="398" Canvas.Left="30" Canvas.Top="55" Background="Black" Foreground="White"/>
-                        <ListView x:Name="lvCountriesEdit" Height="176" Canvas.Left="30" Canvas.Top="660" Width="398" RenderTransformOrigin="-2.41,0.58" Background="Black">
+                        <ListView x:Name="lvCountriesEdit" Height="176" Canvas.Left="30" Canvas.Top="660" Width="398" RenderTransformOrigin="-2.41,0.58" Background="Black" SelectionChanged="lvCountriesEdit_SelectionChanged">
                             <ListView.View>
                                 <GridView>
                                     <GridViewColumn/>
                                 </GridView>
                             </ListView.View>
                         </ListView>
-                        <TextBox x:Name="tbCountryName" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="660" Width="120"  Background="Black"/>
-                        <TextBox x:Name="tbMaxCash" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="688" Width="120" Background="Black"/>
-                        <TextBox x:Name="tbCurrency" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="716" Width="120" Background="Black" />
+                        <TextBox x:Name="tbCountryName" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="660" Width="120"  Background="Black" Foreground="White"/>
+                        <TextBox x:Name="tbMaxCash" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="688" Width="120" Background="Black" Foreground="White"/>
+                        <TextBox x:Name="tbCurrency" Height="23" Canvas.Left="564" TextWrapping="Wrap" Text="" Canvas.Top="716" Width="120" Background="Black" Foreground="White" />
                         <Label x:Name="lbCountryName" Content="Landnamn:" Canvas.Left="467" Canvas.Top="654" Foreground="White"/>
                         <Label x:Name="lbMaxCash" Content="Traktamente" Canvas.Left="467" Canvas.Top="683" Foreground="White"/>
                         <Label Content="Valuta" Canvas.Left="467" Canvas.Top="716" Foreground="White" RenderTransformOrigin="0.853,0.552"/>
-                        <Button x:Name="btnAddCountry" Content="Lägg till" Canvas.Left="467" Canvas.Top="750" Width="75" Background="Black" Foreground="White"/>
-                        <Button Content="Uppdatera" Canvas.Left="547" Canvas.Top="750" Width="88" Background="Black" Foreground="White"/>
+                        <Button x:Name="btnAddCountry" Content="Lägg till" Canvas.Left="467" Canvas.Top="750" Width="75" Background="Black" Foreground="White" Click="btnAddCountry_Click"/>
+                        <Button Content="Uppdatera" Canvas.Left="547" Canvas.Top="750" Width="88" Background="Black" Foreground="White" Click="Button_Click_2"/>
                         <Button x:Name="btnRemoveCountry" Content="Ta bort" Canvas.Left="643" Canvas.Top="750" Width="75" RenderTransformOrigin="-0.227,0.63" Foreground="White" Background="Black"/>
                         <Label Content="Välj ett land att uppdatera eller lägg till nytt" Canvas.Left="30" Canvas.Top="626" RenderTransformOrigin="-1.322,0.379" Foreground="White"/>
                         <Button x:Name="btnLogOutChef" Content="Logga ut" Canvas.Left="721" Canvas.Top="6" Width="75" RenderTransformOrigin="0.413,-0.391" Background="White" Foreground="Black"/>
@@ -207,6 +207,6 @@
         </Grid>
 
 
-        </ScrollViewer>
+    </ScrollViewer>
 
 </Window>
