--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿    <Window x:Class="Scrumproject.MainWindow"
+﻿<Window x:Class="Scrumproject.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:scrumproject="clr-namespace:Scrumproject"
@@ -41,14 +41,12 @@
                     <Canvas Margin="13,28,223,96">
                         <DatePicker x:Name="dpStartDate" Canvas.Left="191" Canvas.Top="-9" Width="119" Height="27" Background="Black"></DatePicker>
                         <Label x:Name="lbStartDate" Content="Välj start/slutdatum                            " Canvas.Top="-9" Width="167" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16"/>
-                        <Label x:Name="lbFreeDay" Content="Ange antal lediga dagar" Canvas.Top="18" Width="197" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                         <Label x:Name="lbCarTripLength" Content="Lägg till bilresa" Canvas.Top="71" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                         <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="1" Canvas.Top="133" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
                         <Label x:Name="lbLand" Content="Välj land" Canvas.Left="231" Canvas.Top="164" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
                         <TextBox x:Name="TbCarTripLengthKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="74" Width="102" Background="Black" Foreground="White"/>
                         <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan" Canvas.Left="446" Canvas.Top="144" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
                         <TextBox x:Name="tbDoneOnTrip" Height="135" Canvas.Left="449" TextWrapping="Wrap" Text="" Canvas.Top="173" Width="300" Background="Black" Foreground="White"/>
-                        <TextBox x:Name="TbDaysOff" Height="23" Canvas.Left="191" TextWrapping="Wrap" Text="" Canvas.Top="24" Width="38" Background="Black" Foreground="White"/>
                         <ComboBox x:Name="CbCountries" Canvas.Left="234" Canvas.Top="191" Width="172" SelectionChanged="CbCountries_SelectionChanged" Height="25"/>
                         <Button x:Name="BtnSaveReceipt" Content="Spara Kvitto
                             " Canvas.Left="165" Canvas.Top="473" Width="88" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="5,1,1,1" Click="Button_Click_1" Height="21"/>
@@ -80,7 +78,7 @@
                         <Button x:Name="btnUpdateTotalDriven" Content="Lägg till" Canvas.Left="279" Canvas.Top="74" Width="127" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1" Click="btnUpdateTotalDriven_Click" Height="23"/>
                         <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="1" Canvas.Top="315" Width="89" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Height="20" Click="btnDeleteCountry_Click"/>
                         <Label Content="            " Canvas.Left="236" Canvas.Top="241" Width="71" Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16" Background="#FF5F93AC" Height="27"/>
-                        <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="234" Canvas.Top="24" Width="172" Click="btnUpdateList_Click" Background="White" Foreground="Black" Height="23"/>
+                        <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="191" Canvas.Top="24" Width="172" Click="btnUpdateList_Click" Background="White" Foreground="Black" Height="23"/>
                         <TextBox x:Name="TbTotalKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="102" Width="102" Foreground="White" Background="#FF4F6C89"/>
                         <Label x:Name="LbKm" Content="" Canvas.Left="98" Canvas.Top="71" Foreground="#FF51FF00"/>
                         <Label x:Name="LbTotalKm" Content="Sammanlagd sträcka" Canvas.Left="1" Canvas.Top="97" Foreground="White" FontSize="16" FontWeight="Bold"/>
@@ -101,6 +99,10 @@
                         <Button x:Name="BtnLogIn" Content="Logga In" Canvas.Left="467" Canvas.Top="48" Width="143" Foreground="Black" Background="White" Click="BtnLogIn_Click" Height="25"/>
                         <Button x:Name="btnLogOut" Content="Logga ut" Canvas.Left="563" Canvas.Top="25" Width="75" Background="White" Foreground="Black" Visibility="Hidden" Click="btnLogOut_Click"/>
                         <Button x:Name="btnForgotPassword" Content="Glömt Lösenord" Canvas.Left="615" Canvas.Top="48" Width="138" Background="White" Foreground="Black" Height="25"/>
+                        <CheckBox x:Name="CHBBreakfast" Content="Frukost" Canvas.Left="236" Canvas.Top="279" Foreground="White"/>
+                        <CheckBox x:Name="CHBLunch" Content="Lunch" Canvas.Left="236" Canvas.Top="302" Foreground="White"/>
+                        <CheckBox x:Name="CHBDinner" Content="Middag" Canvas.Left="236" Canvas.Top="321" Foreground="White"/>
+                        <CheckBox x:Name="CHBVacationday" Content="Ledig" Canvas.Left="319" Canvas.Top="249" FontWeight="Bold" Background="White" Foreground="White"/>
 
 
                     </Canvas>
@@ -206,6 +208,6 @@
         </Grid>
 
 
-        </ScrollViewer>
+    </ScrollViewer>
 
 </Window>
